<resources>
    <string name="app_name">Travel</string>
    <string name="label_sign_up">Sign up</string>
    <string name="or_register_with_email_password"><![CDATA[Or, register with Email & Password]]></string>
    <string name="hint_email_id">Email ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_full_name">Full Name</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login.</string>
    <string name="label_login">Login</string>
    <string name="or_login_with">Or Login with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="otp_verification">Verify your \nPhone Number</string>
    <string name="we_have_sent_an_otp_on_the_given_number">We have sent an OTP on the given number</string>
    <string name="send_otp">Send OTP</string>
    <string name="phone_number_verification_header">Continue with Phone Number Verification</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="action_stories">Stories</string>
    <string name="action_plan">Plan</string>
    <string name="action_share">Share</string>
    <string name="profile">Profile</string>
    <string name="action_calculate">Calculate</string>
    <string name="action_menu">Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_text_empty_fields">Please provide all necessary details.</string>
    <string name="auth_failed">Authentication failed. Please try again after sometime</string>
    <string name="search_your_trips">Search your trips</string>
    <string name="start_planning_add_trip">Start planning: Add Trip</string>
    <string name="start_planning_update_trip">Start planning : \nUpdate Trip</string>
    <string name="add_title">Add Title</string>
    <string name="provide_a_short_description_here">Provide a short description here…</string>
    <string name="journey_date">Journey Date</string>
    <string name="return_date">Return Date</string>
    <string name="where_from">Where From</string>
    <string name="where_to">Where To</string>
    <string name="number_of_person">Total heads</string>
    <string name="add_trip">Add Trip</string>
    <string name="update_trip">Update</string>
    <string name="fab_add_stories">Add Stories</string>
    <string name="add_itinerary">Add Itinerary</string>
    <string name="persons_count">%d Persons</string>
    <string name="duration_count">%d Days</string>
    <string name="journey_mode">Journey mode</string>
    <string name="lorem_3_words">Lorem ipsum dolor</string>
    <string name="lorem_one_line">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="lorem_paragraph">Nam in pharetra nisi. Sed sollicitudin tristique arcu non mollis. Pellentesque blandit mattis ipsum, id commodo odio fermentum et. Phasellus enim risus, laoreet sed erat et, tristique tincidunt sem. Fusce cursus porttitor erat, at efficitur velit auctor in. Sed at facilisis odio. Vivamus lobortis tincidunt convallis. Cras commodo sit amet lacus ac dignissim. Sed laoreet, arcu ac egestas vulputate, diam odio rutrum erat, in iaculis mauris urna vel est. Nunc vitae enim non ex euismod fermentum at et tellus. Vestibulum sed nulla ligula.</string>
    <string name="add_journey_details">Add Journey Details</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="add_hotel_check_in_details">Add Hotel Check-In Details</string>
    <string name="hotel_check_in_date">Check-in date</string>
    <string name="check_in_time">Check-in time</string>
    <string name="hotel_address_location">Hotel address/ location</string>
    <string name="hotel_name">Hotel name</string>
    <string name="add_sightseeing_details">Add Sightseeing details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place_name">Place name</string>
    <string name="day_date">Day %d\n\n %s</string>
    <string name="hotel_details">%s, \n%s</string>
    <string name="check_in_details">Check-In at %s</string>
    <string name="from_to_details">From: %s\nTo: %s</string>
    <string name="start_at_details">Start at %s</string>
    <string name="visit_details">Visit at %s</string>
    <string name="sight_details">%s, %s</string>
    <string name="my_stories">My Stories</string>
    <string name="settings_ask_a_question">Ask a question</string>
    <string name="settings_faq">FAQ</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="app_theme">App theme</string>
    <string name="app_language">App language</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="create_new_group">Create new Group</string>
    <string name="manage_all_your_expenses_here">Manage all your expenses here!</string>
    <string name="simple_debts_desc">Automatically combine debts to reduce the total number of repayments between group members.</string>
    <string name="group_name">Group name</string>
    <string name="create">Create</string>
    <string name="cancel">Close</string>
    <string name="sign_out_message">This action will sign you out of the app. Need a break? You can always come back later.</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="confirm">Confirm</string>
    <string name="add_member_to_group">Add to group</string>
    <string name="search_members_by_name">Search members by name</string>
    <string name="add_member_desc">Adding a member to this group will include the member in all transactions henceforth.</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="system_default_theme">System Default Theme</string>
    <string name="place_address">Place address</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_update_profile_photo">Add/Update Profile Photo</string>
    <string name="group_members">Group Members</string>
    <string name="update_plan">Update Plan</string>
    <string name="update_itinerary">Update Itinerary</string>
    <string name="day_of_trip">Day number</string>
    <string name="mark_trip_as_complete">Mark item as complete</string>
    <string name="mark_complete_message">Are you sure to mark this item as completed? It cannot be update or undone further</string>
    <string name="resend_code">Resend code</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="phone">Phone</string>
    <string name="otp_info">We will send you an one time SMS to verify and continue\nCarrier rates may apply.</string>
    <string name="add_expense_details">Add Expense Details</string>
    <string name="split_mode">Split mode</string>
    <string name="paid_by">Paid by</string>
    <string name="divide_among_person1_person2">Divide among (person1, person2, ..)</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_the_amount_paid">Enter the amount paid</string>
    <string name="add_expense">Add Expense</string>
    <string name="route_details">Route Details</string>
    <string name="set_app_theme">Set App Theme</string>
    <string name="simplify_group_debts">Simplify group debts</string>
    <string name="length_exceeds_error">Length exceeds limit of %d</string>
    <string name="invalid_value_error">%s is an invalid value</string>
    <string name="end_date_e_start_date">Start date and return date are equal</string>
    <string name="end_date_l_start_date">Start date greater return start date</string>
    <string name="empty_fields_msg">Fields cannot be empty</string>
    <string name="dummy_hashtags">#foodie #food #foodporn #instafood #foodphotography #foodstagram #foodblogger #yummy #foodlover #delicious #foodgasm #instagood #foodies #homemade #healthyfood #tasty #foodpics #dinner #foodiesofinstagram #love #lunch #yum #dessert #cooking #breakfast #foodblog #chef #eat #restaurant #bhfyp</string>
    <string name="post">Post content</string>
    <string name="add_photos">Add Photos</string>
    <string name="create_new_post">Create new post</string>
    <string name="_2_more">+ %d more photos…</string>

</resources>