<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/surfaceVariant"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@color/primary"
        android:text="Set App Theme"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/theme_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <RadioGroup
            android:id="@+id/theme_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/light_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_theme"
                android:fontFamily="@font/roboto_regular"/>
            <RadioButton
                android:id="@+id/dark_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"
                android:fontFamily="@font/roboto_regular"/>
            <RadioButton
                android:id="@+id/sys_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_default_theme"
                android:fontFamily="@font/roboto_regular"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_options">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:textColor="@color/onError"
            android:backgroundTint="@color/error"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/acceptance_colour"
            android:text="@string/confirm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>