<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppLaunchSetup.PhoneLoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/otp_animation" />

    <TextView
        android:id="@+id/login_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_verification_header"
        android:textAlignment="center"
        android:textSize="32sp"
        android:fontFamily="@font/roboto_black"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_view" />

    <TextView
        android:id="@+id/login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="We will send you an one time SMS to verify and continue\nCarrier rates may apply."
        android:textAlignment="center"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_header_text" />

    <!--
    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="16dp"
        app:ccp_countryPreference="IN,US,NZ"
        app:ccp_defaultCode="91"
        app:ccp_defaultNameCode="IN"
        app:ccp_textColor="#1C2020"
        app:layout_constraintBottom_toBottomOf="@+id/user_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_phone_number" />
    -->

    <EditText
        android:id="@+id/user_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_in_edittext_bg"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/phone_number"
        android:layout_margin="32dp"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_description" />

    <Button
        android:id="@+id/send_otp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/send_otp"
        app:cornerRadius="12dp"
        android:layout_margin="32dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>